# ztcodewars-tgbot

./: README.rst  main.py  pyproject.toml
tests/: test_ztcodewars.py
ztcodewars/: codewars.py
